# datascience2ml

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  ruff.toml  setup.cfg
.dvc/: config
.github/actions/build-application/: action.yml  actions.yml
.github/workflows/: workflow.yml
datas/: rent_apartments.csv.dvc
inference_service/: Makefile  pyproject.toml  setup.cfg
inference_service/.github/workflows/: lint.yml
inference_service/app/: run.py
inference_service/app/api/: prediction.py
inference_service/app/schema/: appartment.py
inference_service/app/services/: model_inference.py
inference_service/app/services/config/: __init__.py  logger.py  model.py  paths.py
notebooks/: random_forest_model.ipynb
src/: __init__.py  collect.py  config.py  config2.py  db_model.py  logging_test.py  model.py  model_service.py  paths.py  preparation.py  runner.py  runner_builder.py  runner_inference.py
src/config/: .env  __init__.py  config.py  database.py  logger.py  model.py
src/databases/: db_model.py
src/datas/: .gitignore
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/pipeline/: collect.py  model.py  preparation.py
