[tool.poetry]
name = "datascience2ml"
version = "0.1.0"
description = "From NoteBook to ML Engineer"
authors = ["Mamadou Camara <camara0388@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
flake8 = "^7.1.1"
wemake-python-styleguide = "^0.19.2"
ruff = "^0.6.9"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "src/config/__init__.py",
    "src/config/.env",
    "src/databases/database.sqlite",
    "src/logs",
    "src/model/models"

]
extend-ignore = ["F401"]

[tool.black]
skip-string-normalization=true
